# wasm-rend

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  index.html
assets/shaders/: solid.frag.wgsl  solid.vert.wgsl  solid.wgsl
src/: dom.rs  lib.rs  runtime.rs
src/gpu/: frame.rs  mod.rs  pipeline.rs  shader.rs  wgpu_context.rs
src/gpu/types/: camera.rs  index.rs  mod.rs  object.rs  texture.rs  vertex.rs
src/io/: stl.rs
src/model/: camera.rs  mesh.rs  mod.rs  object.rs
src/render/: mod.rs
src/state/: engine.rs  inner.rs  internal.rs  mod.rs  shared.rs
src/state/internal/: engine.rs  mod.rs
