[package]
name = "wasm-rend"
version = "0.1.0"
authors = ["Denis Pralas <dpralas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Element",
    "HtmlCanvasElement",
    "Window",
    "Document",
] }
winit = "0.27"
wgpu = { version = "0.14", features = ["webgl"] }
glam = "0.22"
stl_io = "0.7"
rayon = { version = "1", optional = true }
wasm-bindgen-rayon = { version = "1", features = [
    "no-bundler",
], optional = true }
byteorder = "1"
fxhash = "0.2"
once_cell = "1"

[features]
parallel = ["rayon", "wasm-bindgen-rayon"]
